--- a/src/main/resources/static/manage/foodKindList.html
+++ b/src/main/resources/static/manage/foodKindList.html
@@ -90,7 +90,7 @@
                     width: '15%',
                 }, {
                     field: 'foodKindName',
-                    title: '菜品种类名称',
+                    title: '菜品种类名称(可修改)',
                     edit: 'text',
                     width: '15%',
                 }, {
