--- a/src/main/resources/static/manage/index.html
+++ b/src/main/resources/static/manage/index.html
@@ -80,7 +80,7 @@
                                class="site-demo-active" data-type="tabAdd">已删除用户回收站</a></dd>
                     </dl>
 
-                <li class="layui-nav-item"><a href="#" data-url="adminList" data-title="管理员相关" data-id="44"
+                <li class="layui-nav-item"><a href="#" data-url="adminList.html" data-title="管理员相关" data-id="44"
                                               class="site-demo-active" data-type="tabAdd">管理员相关</a></li>
             </ul>
         </div>
