--- a/src/main/resources/static/manage/adminList.html
+++ b/src/main/resources/static/manage/adminList.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="css/font.css">
     <link rel="stylesheet" href="lib/layui/css/layui.css">
-    <title>订单总况</title>
+    <title>所有顾客</title>
     <style>
         .layui-form-label {
             width: 60px;
@@ -40,10 +40,11 @@
         </form>
     </div>
 
+    <button class="layui-btn layui-btn-sm" id="add">添加顾客</button>
     <button class="layui-btn layui-btn-sm" onclick="javascript:location.reload();">
         <i class="layui-icon layui-icon-refresh-3"></i>
     </button>
-    <table id="orderByCondition" lay-filter="orderByCondition"></table>
+    <table id="allAdmin" lay-filter="allAdmin"></table>
 </div>
 
 
@@ -55,35 +56,26 @@
 <script type="text/javascript" src="lib/layui/layui.js"></script>
 
 <script>
-    layui.use(['table', 'layer'], function () {
-        const str = window.location.href;
-        const searchCondition = str.substr(str.indexOf('=') + 1);
-
+    layui.use(['table','layer'], function () {
         const path = location.protocol + "//" + window.location.host + "/starryfood";
         const table = layui.table,
             layer = layui.layer;
         //展示已知数据
         table.render({
-            elem: '#orderByCondition',
+            elem: '#allAdmin',
             toolbar: 'default',
             loading: true, //翻页加loading
-            url: path + '/order/getOrdersSimple?searchCondition=' + searchCondition,
-            parseData: function (res) {
-                if (res.code == 631) {
-                    return {
-                        "code": res.code, //解析接口状态
-                        "msg": res.msg, //解析提示文本
-                        "count": res.data.size, //解析数据长度
-                        "data": res.data.list, //解析数据列表
-                    };
-                }else{
-                    layer.msg(`${res.msg}`, {time: 1500,})
-                    return;
-                }
-
+            url: path + '/admin/getAllAdmins', //数据接口(不需要带项目名)
+            parseData: function (res) { //res 即为原始返回的数据
+                return {
+                    "code": res.code, //解析接口状态
+                    "msg": res.msg, //解析提示文本
+                    "count": res.data.size, //解析数据长度
+                    "data": res.data.list, //解析数据列表
+                };
             },
             response: {
-                statusCode: 631 //规定成功的状态码，默认：0
+                statusCode: 231 //规定成功的状态码，默认：0
             },
             request: {
                 pageName: 'pageNum', //页码的参数名称，默认：page
@@ -96,36 +88,35 @@
                     width: '5%',
                     type: 'numbers',
                     minWidth: 20,
-                }, {
-                    field: 'orderId',
-                    title: '订单号',
+                },{
+                    field: 'adminId',
+                    title: '管理员账号',
                     width: '15%',
-                    minWidth: 100,
-                }, {
-                    field: 'orderConditionString',
-                    title: '订单状态',
-                    width: '15%',
-                    minWidth: 100,
-                }, {
-                    field: 'orderCreateCustomer',
-                    title: '下单人',
-                    width: '15%',
-                    minWidth: 100,
-                }, {
-                    field: 'createTimeString',
-                    title: '下单时间',
-                    width: '20%',
                     minWidth: 120,
                 }, {
-                    field: 'orderDealAdmin',
-                    title: '处理者',
-                    width: '10%',
-                    minWidth: 50,
+                    field: 'adminName',
+                    title: '管理员名称(点击修改)',
+                    edit: 'text',
+                    width: '15%',
+                    minWidth: 120,
+                },{
+                    field: 'createTimeString',
+                    title: '创建时间',
+                    width: '16%',
+                    sort: true,
+                }, {
+                    field: 'createUser',
+                    title: '创建者',
+                    width: '12%',
                 }, {
                     field: 'updateTimeString',
-                    title: '上次处理时间',
-                    width: '20%',
-                    minWidth: 120,
+                    title: '最近修改时间',
+                    width: '16%',
+                    sort: true,
+                }, {
+                    field: 'updateUser',
+                    title: '最近修改者',
+                    width: '13%',
                 }, {
                     fixed: 'right',
                     width: '15%',
@@ -142,28 +133,22 @@
             id: "dataTable"
         });
 
-        // 数据重载（查询某顾客的所有订单情况）
+        // 数据重载（查询）
         const active = {
             reload: function () {
                 //执行重载
                 table.reload('dataTable', {
-                    url: path + '/order/getByCustomerIdSimple',
+                    url: path + '/customer/getByCustomerId',
                     parseData: function (res) { //res 即为原始返回的数据
-                        if (res.code == 631) {
-                            return {
-                                "code": res.code, //解析接口状态
-                                "msg": res.msg, //解析提示文本
-                                "count": res.data.size, //解析数据长度
-                                "data": res.data.list, //解析数据列表
-                            };
-                        }else{
-                            layer.msg(`${res.msg}`, {time: 1500})
-                            return;
-                        }
-
+                        return {
+                            "code": res.code, //解析接口状态
+                            "msg": res.msg, //解析提示文本
+                            "count":1 , //解析数据总个数
+                            "data": [res.data], //解析数据列表
+                        };
                     },
                     response: {
-                        statusCode: 631 //规定成功的状态码，默认：0
+                        statusCode: 331 //规定成功的状态码，默认：0
                     },
                     page: {
                         curr: 1 //重新从第 1 页开始
@@ -181,11 +166,11 @@
         });
 
         //监听行工具事件
-        table.on('tool(orderByCondition)', function (obj) { //注：tool 是工具条事件名，test 是 table 原始容器的属性 lay-filter="对应的值"
+        table.on('tool(allAdmin)', function (obj) { //注：tool 是工具条事件名，test 是 table 原始容器的属性 lay-filter="对应的值"
             const data = obj.data //获得当前行数据
                 , layEvent = obj.event; //获得 lay-event 对应的值
             if (layEvent == 'update') {
-                const content = `orderUpdate.html?orderId=${data.orderId}`;
+                const content = `customerUpdate.html?customerUuid=${data.customerUuid}&customerId=${data.customerId}&customerName=${data.customerName}`;
                 layer.open({
                     type: 2,
                     content: [content],
@@ -194,18 +179,18 @@
                     shade: 0.5,
                     shadeClose: true,//点击遮罩关闭
                 });
-            } else if (layEvent == 'delete') {
+            }else if(layEvent == 'delete'){
                 layer.confirm('确认要删除吗？', {
-                    btn: ['确定', '取消'] // 按钮
-                }, function () {
+                        btn : [ '确定', '取消' ] // 按钮
+                    },function(){
                     $.ajax({
                         type: "get",
-                        url: path + "/order/delete?orderId=" + data.orderId,
+                        url: path + "/customer/delete?customerUuid=" + data.customerUuid,
                         dataType: "json",
                         success: function (response) {
                             layer.msg(`${response.msg}`, {
                                 time: 1500,
-                                end: function () {
+                                end: function(){
                                     if (response.code == 311)
                                         obj.del(); //删除对应行（tr）的DOM结构
                                 }
@@ -214,6 +199,45 @@
                     });
                 })
             }
+        })
+
+        // 监听单元格编辑，修改种类名称
+        table.on('edit(allFoodKinds)', function (obj) {
+            let value = obj.value //得到修改后的值
+                , data = obj.data //得到所在行所有键值
+
+            $.ajax({
+                type: "post",
+                url: path + "/admin/update",
+                data: {
+                    "adminUuid": data.adminUuid,
+                    "adminName": value, //修改的管理员名称，此处字段名称也可以用obj.field代替
+                },
+                dataType: "json",
+                success: function (response) {
+                    layer.msg(`${response.msg}`, {
+                        time: 1500,
+                        end: function () {
+                            // 如果没有更新成功，则回滚显示之前的值
+                            if (response.code != 221)
+                                location.reload();
+                        }
+                    })
+
+                }
+            });
+        });
+
+        // 添加管理员
+        $('#add').click(function () {
+            layer.open({
+                type: 2,
+                content: ['adminAdd.html'],
+                area: ['500px', '350px'],
+                move: false,
+                shade: 0.5,
+                shadeClose: true,//点击遮罩关闭
+            });
         })
     })
 </script>
